<resources>
    <string name="app_name">REUSISAM</string>
    <string name="user_name">Nombre usuario</string>
    <string name="in_user">Ingresar Usuario</string>
    <string name="email">Email</string>
    <string name="in_email">Ingresar Email</string>
    <string name="password">Contraseña</string>
    <string name="in_password">Ingresar Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="in_confirm_password">Reingresar Contaseña</string>
    <string name="btnSave">Guardar</string>
    <string name="btnReturn">Regresar</string>
    <string name="btnReturn">Regresar</string>|
</resources>